# docs/swagger.yaml
@@ -61,7 +61,6 @@ definitions:
       platform:
         type: string
       uuid:
-        description: ID          primitive.ObjectID `bson:"_id,omitempty"`
         type: string
     type: object
   domain.Event:
@@ -72,8 +71,6 @@ definitions:
       createdAt:
         type: string
       deviceUUID:
-        type: string
-      id:
         type: string
       name:
         type: string
@@ -87,13 +84,11 @@ definitions:
       type:
         type: string
     type: object
-  event.AddEventRequest:
+  event.addEventRequest:
     properties:
       attributes:
         items: {}
         type: array
-      createdAt:
-        type: string
       name:
         type: string
       uuid:
@@ -192,7 +187,7 @@ paths:
           description: Not Found
       summary: Get a device
       tags:
-      - Device
+      - Device GET
   /device_email:
     put:
       consumes:
@@ -221,7 +216,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponce'
       summary: Update a device E-mail
       tags:
-      - Device
+      - Device UPDATE
   /device_email/{email}:
     get:
       consumes:
@@ -247,7 +242,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponce'
       summary: Get devices by Email filter
       tags:
-      - Device
+      - Device GET
   /device_geo:
     get:
       consumes:
@@ -287,7 +282,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponce'
       summary: Get devices by Geoposition
       tags:
-      - Device
+      - Device GET
     put:
       consumes:
       - application/json
@@ -315,7 +310,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponce'
       summary: Update a device geolocation
       tags:
-      - Device
+      - Device UPDATE
   /device_lang:
     put:
       consumes:
@@ -344,7 +339,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponce'
       summary: Update a device language
       tags:
-      - Device
+      - Device UPDATE
   /device_lang/{language}:
     get:
       consumes:
@@ -372,7 +367,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponce'
       summary: Get devices by Language filter
       tags:
-      - Device
+      - Device GET
   /event:
     get:
       consumes:
@@ -424,7 +419,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/event.AddEventRequest'
+          $ref: '#/definitions/event.addEventRequest'
       produces:
       - application/json
       responses:
