# internal/domain/models.go
@@ -2,9 +2,6 @@ package domain
 
 import (
 	"time"
-
-	"github.com/google/uuid"
-	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 type Location struct {
@@ -13,18 +10,16 @@ type Location struct {
 }
 
 type Device struct {
-	// ID          primitive.ObjectID `bson:"_id,omitempty"`
-	UUID     string `bson:"_id"`
-	Platform string    `bson:"platform"`
-	Language string    `json:"language"`
-	Location Location  `bson:"location"`
-	Email    string    `bson:"email"`
+	UUID     string   `bson:"_id"`
+	Platform string   `bson:"platform"`
+	Language string   `json:"language"`
+	Location Location `bson:"location"`
+	Email    string   `bson:"email"`
 }
 
 type Event struct {
-	ID         primitive.ObjectID `bson:"_id,omitempty"`
-	DeviceUUID uuid.UUID          `bson:"device_id"`
-	Name       string             `bson:"name"`
-	CreatedAt  time.Time          `bson:"created_at"`
-	Attributes []interface{}      `bson:"attributes"`
+	DeviceUUID string        `bson:"device_id"`
+	Name       string        `bson:"name"`
+	CreatedAt  time.Time     `bson:"created_at"`
+	Attributes []interface{} `bson:"attributes"`
 }
